tests/NormalTests/paczka1/small_fuzzy/79375403.err
Error in line 1: S767 A43 66,1
Error in line 4: S767 A385 9,8
Error in line 10: S767 A385 22,8
